Added put end point to movies

--- a/testing/movie.html
+++ b/testing/movie.html
@@ -8,9 +8,14 @@
 <body>
   <p>Use this form to test the Movie end point</p>
   <form>
+    <label for="movie_id">ID</label>
+    <input type="number" id="movie_id" />
+    <br />
     <label for="title">Title</label>
     <input type="text" id="title" />
+    <br />
     <button type="button" id="insert_button">Insert</button>
+    <button type="button" id="update_button">Update</button>
     <br />
     <br />
     <p id="response"></p>
