Added delete endpoint

--- a/testing/movie.html
+++ b/testing/movie.html
@@ -16,6 +16,7 @@
     <br />
     <button type="button" id="insert_button">Insert</button>
     <button type="button" id="update_button">Update</button>
+    <button type="button" id="delete_button">Delete</button>
     <br />
     <br />
     <p id="response"></p>
