Added Talent post to Movies

--- a/testing/movie.html
+++ b/testing/movie.html
@@ -14,9 +14,18 @@
     <label for="title">Title</label>
     <input type="text" id="title" />
     <br />
+    <br />
+    <label for="talent_id">Talent ID</label>
+    <input type="number" id="talent_id" />
+    <br />
+    <label for="talent_name">Talent Name</label>
+    <span id="talent_name">&nbsp;</span>
+    <br />
+    <br />
     <button type="button" id="insert_button">Insert</button>
     <button type="button" id="update_button">Update</button>
     <button type="button" id="delete_button">Delete</button>
+    <button type="button" id="addTalent_button">Add Talent</button>
     <br />
     <br />
     <p id="response"></p>
