--- a/testing/movie.html
+++ b/testing/movie.html
@@ -26,6 +26,7 @@
     <button type="button" id="update_button">Update</button>
     <button type="button" id="delete_button">Delete</button>
     <button type="button" id="addTalent_button">Add Talent</button>
+    <button type="button" id="deleteTalent_button">Delete Talent</button>
     <br />
     <br />
     <p id="response"></p>
