Added the genre post

--- a/testing/movie.html
+++ b/testing/movie.html
@@ -22,11 +22,16 @@
     <span id="talent_name">&nbsp;</span>
     <br />
     <br />
+    <label for="genre_select">Genre</label>
+    <select id="genre_select"></select>
+    <br />
+    <br />
     <button type="button" id="insert_button">Insert</button>
     <button type="button" id="update_button">Update</button>
     <button type="button" id="delete_button">Delete</button>
     <button type="button" id="addTalent_button">Add Talent</button>
     <button type="button" id="deleteTalent_button">Delete Talent</button>
+    <button type="button" id="addGenre_button">Add Genre</button>
     <br />
     <br />
     <p id="response"></p>
