Added delete genre

--- a/testing/movie.html
+++ b/testing/movie.html
@@ -32,6 +32,7 @@
     <button type="button" id="addTalent_button">Add Talent</button>
     <button type="button" id="deleteTalent_button">Delete Talent</button>
     <button type="button" id="addGenre_button">Add Genre</button>
+    <button type="button" id="deleteGenre_button">Delete Genre</button>
     <br />
     <br />
     <p id="response"></p>
