--- a/testing/movie.html
+++ b/testing/movie.html
@@ -14,6 +14,15 @@
     <label for="title">Title</label>
     <input type="text" id="title" />
     <br />
+    <label for="release_year">Release Year</label>
+    <input type="number" id="release_year" />
+    <br />
+    <label for="rating">Rating</label>
+    <input type="text" id="rating" />
+    <br />
+    <label for="poster">Poster</label>
+    <input type="text" id="poster" />
+    <br />
     <br />
     <label for="talent_id">Talent ID</label>
     <input type="number" id="talent_id" />
